--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10076,7 +10076,7 @@ input[type='email'] {
 
   .flex {
     flex-wrap: wrap;
-    margin: 0 -5px;
+    margin: 0;
   }
 
   .left {
@@ -10289,7 +10289,7 @@ input[type='email'] {
     font-size: 12px !important;
     margin-top: 26px;
     font-weight: 500;
-    line-height: 15px;
+    line-height: 1.2;
     max-height: 0;
     overflow-x: hidden;
     overflow-y: scroll;
